--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "ecstatic": "^0.7.0",
     "gulp": "^3.8.11",
+    "gulp-gh-pages": "^0.5.0",
     "lodash": "^3.6.0"
   },
   "engines": {
