--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ragingwind",
   "dependencies": {
-    "polymer": "0.8.0",
+    "polymer": "0.9.0-rc.1",
     "chai": "~2.2.0"
   }
 }
