--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "private": true,
   "devDependencies": {
-    "ecstatic": "^0.7.0",
-    "gulp": "^3.8.11",
-    "gulp-gh-pages": "^0.5.0",
-    "lodash": "^3.6.0"
+    "gh-pages": "^0.3.0",
+    "polyserve": "^0.4.0"
+  },
+  "scripts": {
+    "serve": "polyserve",
+    "deploy": "gh-pages -d ."
   },
   "engines": {
     "node": ">=0.10.0"
