--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "polyserve": "^0.4.0"
   },
   "scripts": {
-    "run": "polyserve"
+    "serve": "polyserve",
+    "deploy": "gh-pages -d ."
   },
   "engines": {
     "node": ">=0.10.0"
